--- a/sample.env
+++ b/sample.env
@@ -2,7 +2,7 @@
 DATABASE="postgres"
 POSTGRES_USER="admin"
 POSTGRES_PASSWORD="password"
-POSTGRES_DB="university"
+POSTGRES_DB="cracktech"
 POSTGRES_HOST="postgres"
 POSTGRES_PORT=5432
 PGADMIN_DEFAULT_EMAIL="admin@mail.com"
