--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ colorama==0.4.6
 Django==5.1.1
 django-admin-rangefilter==0.13.2
 django-cors-headers==4.4.0
+django-debug-toolbar==4.4.6
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
