--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ asttokens==2.4.1
 attrs==24.2.0
 billiard==4.2.1
 celery==5.4.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
@@ -20,6 +22,7 @@ executing==2.1.0
 Faker==30.1.0
 gunicorn==23.0.0
 icecream==2.1.3
+idna==3.10
 inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
@@ -33,12 +36,14 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 PyYAML==6.0.2
 referencing==0.35.1
+requests==2.32.3
 rpds-py==0.20.0
 six==1.16.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.2
 uritemplate==4.1.1
+urllib3==2.2.3
 vine==5.1.0
 wcwidth==0.2.13
 whitenoise==6.7.0
