--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,5 @@
 # Postgres creds
-DATABASE="postgres"
+#DATABASE="postgres"
 POSTGRES_USER="admin"
 POSTGRES_PASSWORD="password"
 POSTGRES_DB="cracktech"
@@ -22,3 +22,6 @@ EMAIL_HOST_PASSWORD=""
 RABBITMQ_DEFAULT_USER=guest
 RABBITMQ_DEFAULT_PASS=guest
 RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
+
+# Redis
+REDIS_URL=redis://redis
