--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,14 @@ Django==5.1.1
 django-admin-rangefilter==0.13.2
 django-cors-headers==4.4.0
 django-debug-toolbar==4.4.6
+django-redis==5.4.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
 executing==2.1.0
 Faker==30.1.0
 gunicorn==23.0.0
+hiredis==3.0.0
 icecream==2.1.3
 idna==3.10
 inflection==0.5.1
@@ -35,6 +37,7 @@ PyJWT==2.9.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 PyYAML==6.0.2
+redis==5.1.1
 referencing==0.35.1
 requests==2.32.3
 rpds-py==0.20.0
