--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,5 @@
 # Postgres creds
-#DATABASE="postgres"
+DATABASE="postgres"
 POSTGRES_USER="admin"
 POSTGRES_PASSWORD="password"
 POSTGRES_DB="cracktech"
